[package]
name = "embedded-servo-browser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simpleservo = {path = "/codespace/servo/ports/libsimpleservo/api/", features = ["media-gstreamer"]}
serde = "1.0.163"
serde_json = "1.0.63"
serde_derive = "1.0.163"

# https://github.com/servo/servo/issues/27515#issuecomment-671474054
[patch."https://github.com/servo/webrender"]
webrender = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
webrender_api = { git = "https://github.com/jdm/webrender", branch = "crash-backtrace" }
